add maelstrom alias

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,5 @@
     "dockerfile": "Dockerfile"
   },
   "features": {},
-  "postCreateCommand": "wget https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2 && tar -xf maelstrom.tar.bz2 && rm maelstrom.tar.bz2"
+  "postCreateCommand": "wget https://github.com/jepsen-io/maelstrom/releases/download/v0.2.3/maelstrom.tar.bz2 && tar -xf maelstrom.tar.bz2 && rm maelstrom.tar.bz2 && alias maelstrom=./maelstrom/maelstrom"
 }
