--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
+tokio = { version = "1.43.0", features = ["full"] }
