--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 serde_repr = "0.1.19"
 tokio = { version = "1.43.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
