--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+futures = "0.3.31"
 rand = "0.9.0"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
